beginner/k8s/service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: base-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 3000
      - path: /reader
        backend:
          serviceName: reader
          servicePort: 8080
      - path: /writer
        backend:
          serviceName: writer
          servicePort: 8081
